--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,18 @@
     <artifactId>httpclient</artifactId>
     <version>4.1.1</version>
 </dependency>
+
+     <dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20160810</version>
+		</dependency>
+		
+		<dependency>
+    <groupId>commons-codec</groupId>
+    <artifactId>commons-codec</artifactId>
+    <version>1.9</version>
+</dependency>
   </dependencies>
 
   <build>
