--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,12 @@
     <artifactId>javax.ws.rs-api</artifactId>
     <version>2.0</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+<dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.8.5</version>
+</dependency>
 
   </dependencies>
 
